codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plan_implementation_popup_context_usage.snap
---
source: tui/src/chatwidget/tests/plan_mode.rs
expression: popup
---
   gpt-5 default │  /tmp/project │ API key

  Implement this plan?

› 1. Yes, implement this plan          Switch to Default and start coding.
  2. Yes, clear context and implement  Fresh thread. Context: 89% used.
  3. No, stay in Plan mode             Continue planning with the model.

  Press enter to confirm or esc to go back
